--- a/bower.json
+++ b/bower.json
@@ -16,5 +16,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular-resource": "~1.4.7",
+    "angular-material": "~0.11.4"
+  }
 }
