--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "angular-resource": "~1.4.7",
     "angular-material": "~0.11.4",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "angular-sanitize": "~1.4.7",
+    "angular-markdown-directive": "~0.3.1"
   }
 }
